--- a/TestsGeneratorLab/TestGeneratorConsoleApp/TestGeneratorConsoleApp.csproj
+++ b/TestsGeneratorLab/TestGeneratorConsoleApp/TestGeneratorConsoleApp.csproj
@@ -1,8 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Moq" Version="4.16.1" />
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TestsGeneratorLibrary\TestsGeneratorLibrary.csproj" />
+  </ItemGroup>
 
 </Project>
